--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,12 +12,16 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['cidades']">Cidades</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['estados']">Estados</a>
+        </li>
         <li class="nav-item" ngbDropdown>
           <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown1" role="button"> Cadastros </a>
           <div ngbDropdownMenu aria-labelledby="navbarDropdown1" class="dropdown-menu">
             <a ngbDropdownItem [routerLink]="['/pessoas']">Pessoas</a>
             <a ngbDropdownItem [routerLink]="['/enderecos']">Endereços</a>
             <a ngbDropdownItem [routerLink]="['/cidades']">Cidades</a>
+            <a ngbDropdownItem [routerLink]="['/estados']">Estados</a>
           </div>
         </li>
       </ul>
