--- a/src/app/estado/inserir-estado/inserir-estado.component.html
+++ b/src/app/estado/inserir-estado/inserir-estado.component.html
@@ -12,9 +12,10 @@
         <div class="mb-3">
             <label for="sigla">Sigla:</label>
             <input type="text" #sigla="ngModel" class="form-control" id="sigla" name="sigla"
-                [(ngModel)]="estado.sigla" required />
+                [(ngModel)]="estado.sigla" required mask="SS" />
             <div *ngIf="sigla.errors && (sigla.dirty || sigla.touched)" class="alert alert-danger">
                 <div [hidden]="!sigla.errors.required">Digite a sigla.</div>
+                <div [hidden]="!sigla.errors.mask">A sigla deve conter duas letras.</div>
             </div>
         </div>
         <button type="button" class="btn btn-primary" (click)="inserir()" [disabled]="!formEstado.form.valid">
