--- a/src/app/cidade/listar-cidade/listar-cidade.component.html
+++ b/src/app/cidade/listar-cidade/listar-cidade.component.html
@@ -14,6 +14,9 @@
             <td>{{ cidade.nome }}</td>
             <td>{{ cidade.estado }}</td>
             <td class="text-center" style="width: 300px">
+                <button type="button" class="btn btn-xs btn-info" (click)="abrirModalCidade(cidade)">
+                    <i class="fa fa-eye" aria-hidden="true"></i> Ver
+                </button>
                 <a href="#" title="Editar" alt="Editar" class="btn btn-secondary"
                     [routerLink]="['/cidades/editar', cidade.id]">
                     <i class="fa fa-edit" aria-hidden="true"></i> Editar
