--- a/src/app/endereco/listar-endereco/listar-endereco.component.html
+++ b/src/app/endereco/listar-endereco/listar-endereco.component.html
@@ -14,6 +14,9 @@
             <td>{{ endereco.rua }}, {{ endereco.numero }}</td>
             <td>{{ endereco.cidade }}</td>
             <td class="text-center" style="width: 300px">
+                <button type="button" class="btn btn-xs btn-info" (click)="abrirModalEndereco(endereco)">
+                    <i class="fa fa-eye" aria-hidden="true"></i> Ver
+                </button>
                 <a href="#" title="Editar" alt="Editar" class="btn btn-secondary"
                     [routerLink]="['/enderecos/editar', endereco.id]">
                     <i class="fa fa-edit" aria-hidden="true"></i> Editar
