Implementa modal de estados

--- a/src/app/estado/listar-estado/listar-estado.component.html
+++ b/src/app/estado/listar-estado/listar-estado.component.html
@@ -14,6 +14,9 @@
             <td>{{ estado.nome }}</td>
             <td>{{ estado.sigla }}</td>
             <td class="text-center" style="width: 300px">
+                <button type="button" class="btn btn-xs btn-info" (click)="abrirModalEstado(estado)">
+                    <i class="fa fa-eye" aria-hidden="true"></i> Ver
+                </button>
                 <a href="#" title="Editar" alt="Editar" class="btn btn-secondary"
                     [routerLink]="['/estados/editar', estado.id]">
                     <i class="fa fa-edit" aria-hidden="true"></i> Editar
