Remove pipe caixaAlta de Listar Pessoa

--- a/src/app/pessoa/listar-pessoa/listar-pessoa.component.html
+++ b/src/app/pessoa/listar-pessoa/listar-pessoa.component.html
@@ -12,7 +12,7 @@
             </th>
         </tr>
         <tr *ngFor="let pessoa of pessoas">
-            <td>{{ pessoa.nome | caixaAlta }}</td>
+            <td>{{ pessoa.nome }}</td>
             <td>{{ pessoa.idade }}</td>
             <td>{{ pessoa.dataNascimento | mask: 'd0/M0/0000' }}</td>
             <td class="text-center" style="width: 300px">
