Adiciona pipe caixaAlta em listar estados

--- a/src/app/estado/listar-estado/listar-estado.component.html
+++ b/src/app/estado/listar-estado/listar-estado.component.html
@@ -12,7 +12,7 @@
         </tr>
         <tr *ngFor="let estado of estados">
             <td>{{ estado.nome }}</td>
-            <td>{{ estado.sigla }}</td>
+            <td>{{ estado.sigla | caixaAlta }}</td>
             <td class="text-center" style="width: 300px">
                 <button type="button" class="btn btn-xs btn-info" (click)="abrirModalEstado(estado)">
                     <i class="fa fa-eye" aria-hidden="true"></i> Ver
