Altera estilos das tabelas de listagens

--- a/src/app/cidade/listar-cidade/listar-cidade.component.html
+++ b/src/app/cidade/listar-cidade/listar-cidade.component.html
@@ -1,27 +1,29 @@
 <h1>Cidades</h1>
-<table class="table table-striped table-bordered table-hover">
-    <tbody>
+<table class="table table-striped table-hover align-middle">
+    <thead>
         <tr>
             <th>Nome</th>
             <th>Estado</th>
-            <th class="text-center">
+            <th class="text-end">
                 <a href="#" title="Novo" alt="Novo" class="btn btn-primary" [routerLink]="['/cidades/novo']">
                     <i class="fa fa-plus" aria-hidden="true"></i> Novo
                 </a>
             </th>
         </tr>
+    </thead>
+    <tbody>        
         <tr *ngFor="let cidade of cidades">
             <td>{{ cidade.nome }}</td>
             <td>{{ cidade.estado }}</td>
-            <td class="text-center" style="width: 300px">
-                <button type="button" class="btn btn-xs btn-info" (click)="abrirModalCidade(cidade)">
+            <td class="text-end">
+                <button type="button" class="btn btn-sm btn-primary me-2" (click)="abrirModalCidade(cidade)">
                     <i class="fa fa-eye" aria-hidden="true"></i> Ver
                 </button>
-                <a href="#" title="Editar" alt="Editar" class="btn btn-secondary"
+                <a href="#" title="Editar" alt="Editar" class="btn btn-sm btn-secondary me-2"
                     [routerLink]="['/cidades/editar', cidade.id]">
                     <i class="fa fa-edit" aria-hidden="true"></i> Editar
                 </a>
-                <a href="#" title="Remover" alt="Remover" class="btn btn-danger" (click)="remover($event, cidade)">
+                <a href="#" title="Remover" alt="Remover" class="btn btn-sm btn-danger" (click)="remover($event, cidade)">
                     <i class="fa fa-times" aria-hidden="true"></i> Remover
                 </a>
             </td>
