--- a/src/app/endereco/listar-endereco/listar-endereco.component.html
+++ b/src/app/endereco/listar-endereco/listar-endereco.component.html
@@ -1,27 +1,29 @@
 <h1>Endereços</h1>
-<table class="table table-striped table-bordered table-hover">
-    <tbody>
+<table class="table table-striped table-hover align-middle">
+    <thead>
         <tr>
             <th>Rua</th>
             <th>Cidade</th>
-            <th class="text-center">
+            <th class="text-end">
                 <a href="#" title="Novo" alt="Novo" class="btn btn-primary" [routerLink]="['/enderecos/novo']">
                     <i class="fa fa-plus" aria-hidden="true"></i> Novo
                 </a>
             </th>
         </tr>
+    </thead>
+    <tbody>       
         <tr *ngFor="let endereco of enderecos">
             <td>{{ endereco.rua }}, {{ endereco.numero }}</td>
             <td>{{ endereco.cidade }}</td>
-            <td class="text-center" style="width: 300px">
-                <button type="button" class="btn btn-xs btn-info" (click)="abrirModalEndereco(endereco)">
+            <td class="text-end">
+                <button type="button" class="btn btn-sm btn-primary me-2" (click)="abrirModalEndereco(endereco)">
                     <i class="fa fa-eye" aria-hidden="true"></i> Ver
                 </button>
-                <a href="#" title="Editar" alt="Editar" class="btn btn-secondary"
+                <a href="#" title="Editar" alt="Editar" class="btn btn-sm btn-secondary me-2"
                     [routerLink]="['/enderecos/editar', endereco.id]">
                     <i class="fa fa-edit" aria-hidden="true"></i> Editar
                 </a>
-                <a href="#" title="Remover" alt="Remover" class="btn btn-danger" (click)="remover($event, endereco)">
+                <a href="#" title="Remover" alt="Remover" class="btn btn-sm btn-danger" (click)="remover($event, endereco)">
                     <i class="fa fa-times" aria-hidden="true"></i> Remover
                 </a>
             </td>
