--- a/src/app/estado/listar-estado/listar-estado.component.html
+++ b/src/app/estado/listar-estado/listar-estado.component.html
@@ -1,28 +1,30 @@
 <h1>Estados</h1>
-<table class="table table-striped table-bordered table-hover">
-    <tbody>
+<table class="table table-striped table-hover align-middle">
+    <thead>
         <tr>
             <th>Nome</th>
             <th>Sigla</th>
-            <th class="text-center">
+            <th class="text-end">
                 <a href="#" title="Novo" alt="Novo" class="btn btn-primary" [routerLink]="['/estados/novo']">
                     <i class="fa fa-plus" aria-hidden="true"></i> Novo
                 </a>
             </th>
         </tr>
+    </thead>
+    <tbody>
         <tr *ngFor="let estado of estados">
             <td>{{ estado.nome }}</td>
             <td>{{ estado.sigla | caixaAlta }}</td>
-            <td class="text-center" style="width: 300px">
-                <button type="button" class="btn btn-xs btn-info" (click)="abrirModalEstado(estado)">
+            <td class="text-end">
+                <button type="button" class="btn btn-sm btn-primary me-2" (click)="abrirModalEstado(estado)">
                     <i class="fa fa-eye" aria-hidden="true"></i> Ver
                 </button>
-                <a href="#" title="Editar" alt="Editar" class="btn btn-secondary"
+                <a href="#" title="Editar" alt="Editar" class="btn btn-sm btn-secondary me-2"
                     [routerLink]="['/estados/editar', estado.id]">
                     <i class="fa fa-edit" aria-hidden="true"></i> Editar
                 </a>
-                <a href="#" title="Remover" alt="Remover" class="btn btn-danger" (click)="remover($event, estado)">
-                    <i class="fa fa-times" aria-hidden="true"></i> Remover
+                <a href="#" title="Remover" alt="Remover" class="btn btn-sm btn-danger" (click)="remover($event, estado)">
+                    <i class="far fa-trash-alt"></i> Remover
                 </a>
             </td>
         </tr>
