--- a/src/app/cidade/inserir-cidade/inserir-cidade.component.html
+++ b/src/app/cidade/inserir-cidade/inserir-cidade.component.html
@@ -17,7 +17,7 @@
                 <div [hidden]="!estado.errors.required">Digite o estado.</div>
             </div>
         </div>
-        <button type="button" class="btn btn-primary" (click)="inserir()" [disabled]="!formCidade.form.valid">
+        <button type="button" class="btn btn-primary me-2" (click)="inserir()" [disabled]="!formCidade.form.valid">
             <i class="fa fa-save" aria-hidden="true"></i> Salvar
         </button>
         <a class="btn btn-secondary" [routerLink]="['/cidades']">
