--- a/src/app/estado/inserir-estado/inserir-estado.component.html
+++ b/src/app/estado/inserir-estado/inserir-estado.component.html
@@ -18,7 +18,7 @@
                 <div [hidden]="!sigla.errors.mask">A sigla deve conter duas letras.</div>
             </div>
         </div>
-        <button type="button" class="btn btn-primary" (click)="inserir()" [disabled]="!formEstado.form.valid">
+        <button type="button" class="btn btn-primary me-2" (click)="inserir()" [disabled]="!formEstado.form.valid">
             <i class="fa fa-save" aria-hidden="true"></i> Salvar
         </button>
         <a class="btn btn-secondary" [routerLink]="['/estados']">
