--- a/src/app/pessoa/editar-pessoa/editar-pessoa.component.html
+++ b/src/app/pessoa/editar-pessoa/editar-pessoa.component.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <button type="button" class="btn btn-primary" (click)="atualizar()" [disabled]="!formPessoa.form.valid">
+        <button type="button" class="btn btn-primary me-2" (click)="atualizar()" [disabled]="!formPessoa.form.valid">
             <i class="fa fa-save" aria-hidden="true"></i> Atualizar
         </button>
         <a class="btn btn-secondary" [routerLink]="['/pessoas']">
