--- a/src/app/pessoa/inserir-pessoa/inserir-pessoa.component.html
+++ b/src/app/pessoa/inserir-pessoa/inserir-pessoa.component.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-        <button type="button" class="btn btn-primary" (click)="inserir()" [disabled]="!formPessoa.form.valid">
+        <button type="button" class="btn btn-primary me-2" (click)="inserir()" [disabled]="!formPessoa.form.valid">
             <i class="fa fa-save" aria-hidden="true"></i> Salvar
         </button>
         <a class="btn btn-secondary" [routerLink]="['/pessoas']">
