Implementa checkbox de "fumante" ao cad de pessoas

--- a/src/app/pessoa/listar-pessoa/listar-pessoa.component.html
+++ b/src/app/pessoa/listar-pessoa/listar-pessoa.component.html
@@ -5,6 +5,7 @@
             <th>Nome</th>
             <th>Idade</th>
             <th>Data de Nascimento</th>
+            <th>Fumante?</th>
             <th class="text-end">
                 <a href="#" title="Novo" alt="Novo" class="btn btn-primary" [routerLink]="['/pessoas/novo']">
                     <i class="fa fa-plus" aria-hidden="true"></i> Novo
@@ -17,6 +18,7 @@
             <td>{{ pessoa.nome }}</td>
             <td>{{ pessoa.idade }}</td>
             <td>{{ pessoa.dataNascimento | mask: 'd0/M0/0000' }}</td>
+            <td>{{ pessoa.fumante ? 'Sim' : 'Não' }}</td>
             <td class="text-end">
                 <button type="button" class="btn btn-sm btn-primary me-2" (click)="abrirModalPessoa(pessoa)">
                     <i class="fa fa-eye" aria-hidden="true"></i> Ver
