--- a/src/app/pessoa/editar-pessoa/editar-pessoa.component.html
+++ b/src/app/pessoa/editar-pessoa/editar-pessoa.component.html
@@ -32,6 +32,13 @@
                 </div>
             </div>
         </div>
+        <div class="form-check mb-3">
+            <input class="form-check-input" type="checkbox" id="fumante" name="fumante" [(ngModel)]="pessoa.fumante"
+                #fumante="ngModel">
+            <label class="form-check-label" for="fumante">
+                Fumante?
+            </label>
+        </div>
         <button type="button" class="btn btn-primary me-2" (click)="atualizar()" [disabled]="!formPessoa.form.valid">
             <i class="fa fa-save" aria-hidden="true"></i> Atualizar
         </button>
