--- a/src/app/pessoa/inserir-pessoa/inserir-pessoa.component.html
+++ b/src/app/pessoa/inserir-pessoa/inserir-pessoa.component.html
@@ -18,7 +18,8 @@
                 numerico minimoValidator [valorMinimo]="18" required />
             <div *ngIf="idade.errors && (idade.dirty || idade.touched)" class="alert alert-danger">
                 <div [hidden]="!idade.errors.required">Digite a idade da pessoa.</div>
-                <div [hidden]="!idade.errors.minimo">Idade deve ser maior ou igual a {{ idade.errors.requiredValue }}.</div>
+                <div [hidden]="!idade.errors.minimo">Idade deve ser maior ou igual a {{ idade.errors.requiredValue }}.
+                </div>
             </div>
         </div>
         <div class="mb-3">
@@ -33,6 +34,13 @@
                     Digite a data de nascimento da pessoa.
                 </div>
             </div>
+        </div>
+        <div class="form-check mb-3">
+            <input class="form-check-input" type="checkbox" id="fumante" name="fumante" [(ngModel)]="pessoa.fumante"
+                #fumante="ngModel">
+            <label class="form-check-label" for="fumante">
+                Fumante?
+            </label>
         </div>
         <button type="button" class="btn btn-primary me-2" (click)="inserir()" [disabled]="!formPessoa.form.valid">
             <i class="fa fa-save" aria-hidden="true"></i> Salvar
