--- a/src/app/endereco/listar-endereco/listar-endereco.component.html
+++ b/src/app/endereco/listar-endereco/listar-endereco.component.html
@@ -2,7 +2,8 @@
 <table class="table table-striped table-hover align-middle">
     <thead>
         <tr>
-            <th>Rua</th>
+            <th>Tipo</th>
+            <th>Logradouro</th>
             <th>Cidade</th>
             <th class="text-end">
                 <a href="#" title="Novo" alt="Novo" class="btn btn-primary" [routerLink]="['/enderecos/novo']">
@@ -13,6 +14,7 @@
     </thead>
     <tbody>       
         <tr *ngFor="let endereco of enderecos">
+            <td>{{ endereco.tipo }}</td>
             <td>{{ endereco.rua }}, {{ endereco.numero }}</td>
             <td>{{ endereco.cidade }}</td>
             <td class="text-end">
