--- a/src/app/endereco/editar-endereco/editar-endereco.component.html
+++ b/src/app/endereco/editar-endereco/editar-endereco.component.html
@@ -85,6 +85,13 @@
                 <div [hidden]="!estado.errors.required">Digite o estado.</div>
             </div>
         </div>
+        <div class="form-check mb-3">
+            <input class="form-check-input" type="checkbox" id="residencial" name="residencial" [(ngModel)]="endereco.residencial"
+                #residencial="ngModel">
+            <label class="form-check-label" for="residencial">
+                Residencial?
+            </label>
+        </div>
         <button type="button" class="btn btn-primary me-2" (click)="atualizar()" [disabled]="!formEndereco.form.valid">
             <i class="fa fa-save" aria-hidden="true"></i> Atualizar
         </button>
