--- a/src/app/pessoa/listar-pessoa/listar-pessoa.component.html
+++ b/src/app/pessoa/listar-pessoa/listar-pessoa.component.html
@@ -6,6 +6,7 @@
             <th>Idade</th>
             <th>Data de Nascimento</th>
             <th>Fumante?</th>
+            <th>Possui Cat. de Motorista?</th>
             <th class="text-end">
                 <a href="#" title="Novo" alt="Novo" class="btn btn-primary" [routerLink]="['/pessoas/novo']">
                     <i class="fa fa-plus" aria-hidden="true"></i> Novo
@@ -19,6 +20,7 @@
             <td>{{ pessoa.idade }}</td>
             <td>{{ pessoa.dataNascimento | mask: 'd0/M0/0000' }}</td>
             <td>{{ pessoa.fumante ? 'Sim' : 'Não' }}</td>
+            <td>{{ pessoa.motorista ? pessoa.motorista : 'Não' }}</td>
             <td class="text-end">
                 <button type="button" class="btn btn-sm btn-primary me-2" (click)="abrirModalPessoa(pessoa)">
                     <i class="fa fa-eye" aria-hidden="true"></i> Ver
