--- a/src/app/cidade/editar-cidade/editar-cidade.component.html
+++ b/src/app/cidade/editar-cidade/editar-cidade.component.html
@@ -11,16 +11,17 @@
         </div>
         <div class="mb-3">
             <label for="estado">Estado:</label>
-            <input type="text" #estado="ngModel" class="form-control" id="estado" name="estado"
-                [(ngModel)]="cidade.estado" required />
+            <ng-select name="estado" [items]="estados" bindLabel="sigla" [(ngModel)]="cidade.estado" #estado="ngModel"
+                placeholder="Selecione um estado" required>
+            </ng-select>
             <div *ngIf="estado.errors && (estado.dirty || estado.touched)" class="alert alert-danger">
-                <div [hidden]="!estado.errors.required">Digite o estado.</div>
+                <div [hidden]="!estado.errors.required">Selecione o estado.</div>
             </div>
         </div>
         <button type="button" class="btn btn-primary me-2" (click)="atualizar()" [disabled]="!formCidade.form.valid">
             <i class="fa fa-save" aria-hidden="true"></i> Atualizar
         </button>
-        <a class="btn btn-secondary" [routerLink]="['/enderecos']">
+        <a class="btn btn-secondary" [routerLink]="['/cidades']">
             <i class="fa fa-arrow-left" aria-hidden="true"></i> Voltar
         </a>
     </form>
