--- a/src/app/cidade/inserir-cidade/inserir-cidade.component.html
+++ b/src/app/cidade/inserir-cidade/inserir-cidade.component.html
@@ -1,20 +1,21 @@
 <h1>Nova Cidade</h1>
 <div class="well">
-    <form #formCidade="ngForm">        
+    <form #formCidade="ngForm">
         <div class="mb-3">
             <label for="nome">Nome:</label>
-            <input type="text" #nome="ngModel" class="form-control" id="nome" name="nome"
-                [(ngModel)]="cidade.nome" required />
+            <input type="text" #nome="ngModel" class="form-control" id="nome" name="nome" [(ngModel)]="cidade.nome"
+                required />
             <div *ngIf="nome.errors && (nome.dirty || nome.touched)" class="alert alert-danger">
                 <div [hidden]="!nome.errors.required">Digite o nome.</div>
             </div>
         </div>
         <div class="mb-3">
             <label for="estado">Estado:</label>
-            <input type="text" #estado="ngModel" class="form-control" id="estado" name="estado"
-                [(ngModel)]="cidade.estado" required />
+            <ng-select name="estado" [items]="estados" bindLabel="sigla" [(ngModel)]="cidade.estado" #estado="ngModel"
+                placeholder="Selecione um estado" required>
+            </ng-select>
             <div *ngIf="estado.errors && (estado.dirty || estado.touched)" class="alert alert-danger">
-                <div [hidden]="!estado.errors.required">Digite o estado.</div>
+                <div [hidden]="!estado.errors.required">Selecione o estado.</div>
             </div>
         </div>
         <button type="button" class="btn btn-primary me-2" (click)="inserir()" [disabled]="!formCidade.form.valid">
