--- a/src/app/endereco/listar-endereco/listar-endereco.component.html
+++ b/src/app/endereco/listar-endereco/listar-endereco.component.html
@@ -17,7 +17,7 @@
         <tr *ngFor="let endereco of enderecos">
             <td>{{ endereco.tipo }}</td>
             <td>{{ endereco.rua }}, {{ endereco.numero }}</td>
-            <td>{{ endereco.cidade }}</td>
+            <td>{{ endereco.cidade?.nome }} - {{ endereco.cidade?.estado?.sigla }}</td>
             <td>{{ endereco.residencial ? 'Residencial' : 'Comercial' }} </td>
             <td class="text-end">
                 <button type="button" class="btn btn-sm btn-primary me-2" (click)="abrirModalEndereco(endereco)">
