--- a/src/app/endereco/inserir-endereco/inserir-endereco.component.html
+++ b/src/app/endereco/inserir-endereco/inserir-endereco.component.html
@@ -71,23 +71,22 @@
         </div>
         <div class="mb-3">
             <label for="cidade">Cidade:</label>
-            <input type="text" #cidade="ngModel" class="form-control" id="cidade" name="cidade"
-                [(ngModel)]="endereco.cidade" required />
+            <ng-select name="cidade" [items]="cidades" bindLabel="nome" [(ngModel)]="endereco.cidade" #cidade="ngModel"
+                placeholder="Selecione uma cidade" required>
+                <ng-template ng-label-tmp let-item="item">
+                    <span>{{ item.nome + ' - ' + item.estado.sigla }}</span>
+                </ng-template>
+                <ng-template ng-option-tmp let-item="item" let-search="searchTerm" let-index="index">
+                    <span>{{ item.nome + ' - ' + item.estado.sigla }}</span>
+                </ng-template>
+            </ng-select>
             <div *ngIf="cidade.errors && (cidade.dirty || cidade.touched)" class="alert alert-danger">
-                <div [hidden]="!cidade.errors.required">Digite a cidade.</div>
-            </div>
-        </div>
-        <div class="mb-3">
-            <label for="estado">Estado:</label>
-            <input type="text" #estado="ngModel" class="form-control" id="estado" name="estado"
-                [(ngModel)]="endereco.estado" required />
-            <div *ngIf="estado.errors && (estado.dirty || estado.touched)" class="alert alert-danger">
-                <div [hidden]="!estado.errors.required">Digite o estado.</div>
+                <div [hidden]="!cidade.errors.required">Selecione uma cidade.</div>
             </div>
         </div>
         <div class="form-check mb-3">
-            <input class="form-check-input" type="checkbox" id="residencial" name="residencial" [(ngModel)]="endereco.residencial"
-                #residencial="ngModel">
+            <input class="form-check-input" type="checkbox" id="residencial" name="residencial"
+                [(ngModel)]="endereco.residencial" #residencial="ngModel">
             <label class="form-check-label" for="residencial">
                 Residencial?
             </label>
