--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,28 +4,54 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
+          <a class="nav-link" [routerLink]="['']">Home</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['pessoas']">Pessoas</a>
         </li>
-        <li class="nav-item">
+        <li *ngIf="
+            usuarioLogado?.perfil === 'ADMIN' ||
+            usuarioLogado?.perfil === 'GERENTE'
+          " class="nav-item">
           <a class="nav-link" [routerLink]="['enderecos']">Endereços</a>
         </li>
-        <li class="nav-item">
+        <li *ngIf="usuarioLogado?.perfil === 'GERENTE'" class="nav-item">
           <a class="nav-link" [routerLink]="['cidades']">Cidades</a>
         </li>
-        <li class="nav-item">
+        <li *ngIf="
+            usuarioLogado?.perfil === 'ADMIN' || usuarioLogado?.perfil === 'FUNC'
+          " class="nav-item">
           <a class="nav-link" [routerLink]="['estados']">Estados</a>
         </li>
         <li class="nav-item" ngbDropdown>
-          <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown1" role="button"> Cadastros </a>
+          <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown1" role="button">
+            Cadastros
+          </a>
           <div ngbDropdownMenu aria-labelledby="navbarDropdown1" class="dropdown-menu">
             <a ngbDropdownItem [routerLink]="['/pessoas']">Pessoas</a>
-            <a ngbDropdownItem [routerLink]="['/enderecos']">Endereços</a>
-            <a ngbDropdownItem [routerLink]="['/cidades']">Cidades</a>
-            <a ngbDropdownItem [routerLink]="['/estados']">Estados</a>
+            <a *ngIf="
+                usuarioLogado?.perfil === 'ADMIN' ||
+                usuarioLogado?.perfil === 'GERENTE'
+              " ngbDropdownItem [routerLink]="['/enderecos']">Endereços</a>
+            <a *ngIf="usuarioLogado?.perfil === 'GERENTE'" ngbDropdownItem [routerLink]="['/cidades']">Cidades</a>
+            <a *ngIf="
+                usuarioLogado?.perfil === 'ADMIN' ||
+                usuarioLogado?.perfil === 'FUNC'
+              " ngbDropdownItem [routerLink]="['/estados']">Estados</a>
           </div>
         </li>
       </ul>
     </div>
+    <ul *ngIf="usuarioLogado" class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <button type="button" class="btn btn-light" (click)="logout()">Logout</button>
+      </li>
+      <li class="nav-item">
+        <p class="navbar-text mb-0">
+          <i class="fa fa-user"></i> {{ usuarioLogado.nome }}
+        </p>
+      </li>
+    </ul>
   </div>
 </nav>
 
